Lab 10 update
